--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,20 +10,5 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-
-- script: |
-    echo '
-    publishTo := Some("AZURE_ARTIFACTS" at "https://dys-ax.pkgs.visualstudio.com/_packaging/DYSAnalytics/maven/v1/")
-    credentials += Credentials(
-          "https://pkgsprodsu3weu.app.pkgs.visualstudio.com/",
-          "dys-ax.pkgs.visualstudio.com",
-          "DYSAnalytics",
-          "$(System.AccessToken)")
-    ' >> build.sbt
-    sed -i -re "s/(version := )\"(.+?)\"/\1\"\2-$(Build.BuildNumber)\"/g" build.sbt
-  displayName: Configure build.sbt
-
-- script: |
-    cat build.sbt
-    sbt clean compile publish
+- script: sbt clean compile publish
   displayName: Build and publish
