Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,3 +12,5 @@ pool:
 steps:
 - script: sbt clean compile package publish
   displayName: Build and publish
+  env:
+    GITHUB_TOKEN: $(GITHUB_TOKEN)
